# filaret-fitness-health-assistant

./: .env.example  .gitignore  README.md  docker-compose.yml  plan.md  pyproject.toml
app/: config.py  database.py  main.py  models.py  scheduler.py
app/bot/keyboards/: common.py
app/bot/routers/: __init__.py  commands.py  meds.py  onboarding.py  reminders.py  symptoms.py  training.py
app/services/: __init__.py  hydration.py  llm.py  modules.py  nutrition.py  nutrition_calculator.py  onboarding_parser.py  personalization.py  sleep.py  timezone.py  training.py
docker/: Dockerfile
docs/: algorithms.md  deployment.md
tests/: test_hydration.py  test_nutrition.py  test_nutrition_calculator.py  test_sleep.py
