[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "filaret-fitness-bot"
version = "0.1.0"
description = "Telegram-бот для поддержки сна, питания и тренировок"
authors = [{ name = "FilaretFitness", email = "dev@filaret.local" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.12.0",
    "apscheduler>=3.10.4",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.4.0",
    "sqlmodel>=0.0.16",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.2",
    "openai>=1.51.2",
    "babel>=2.16.0",
    "python-dateutil>=2.9.0.post0",
    "typing-extensions>=4.12.2",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.23.8",
    "anyio>=4.4.0",
    "ruff>=0.6.9",
    "mypy>=1.11.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = ["app", "docs", "README.md", "pyproject.toml"]

